--- a/ITIResturant/ITIResturant/Views/Booking/Create.cshtml
+++ b/ITIResturant/ITIResturant/Views/Booking/Create.cshtml
@@ -3,9 +3,37 @@
 @model CreateBookingVM
 
 
+@{
+    Layout = "NewLayout";
+    ViewData["ActivePage"] = "Create"; 
+}
+
+@section Sidebar {
+    <!-- هنا بيتكرر نفس الـ Sidebar -->
+    <div class="sidebar bg-light border-end p-3">
+        <h5 class="text-dark mb-4 fw-bold"> Bookings</h5>
+        <ul class="nav flex-column gap-2">
+            <li class="nav-item">
+                <a asp-controller="Booking" asp-action="Create"
+                   class="btn w-100 text-start d-flex align-items-center gap-2 sidebar-btn">
+                    <i class="bi bi-plus-circle"></i> Create Booking
+                </a>
+            </li>
+            <li class="nav-item">
+                <a asp-controller="Booking" asp-action="GetAll"
+                   class="btn w-100 text-start d-flex align-items-center gap-2 active-btn">
+                    <i class="bi bi-list-ul"></i> Get All Bookings
+                </a>
+            </li>
+        </ul>
+    </div>
+}
+
+<h2>Create Booking</h2>
+
 
 <div class="card">
-    <div class="card-header" style="background-color:chocolate; color:white">
+    <div class="card-header" style="background-color:#D4A762; color:white">
         Create Booking
     </div>
     <div class="card-body">
