--- a/ITIResturant/ITIResturant/Views/Shared/NewLayout.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/NewLayout.cshtml
@@ -56,7 +56,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu bg-light">
-                                <a href="~/book.html" class="dropdown-item">Booking</a>
+                                <a asp-controller="Booking" asp-action="Create" class="dropdown-item">Booking </a>
                                 <a href="~/blog.html" class="dropdown-item">Our Blog</a>
                                 <a href="~/team.html" class="dropdown-item">Our Team</a>
                                 <a href="~/testimonial.html" class="dropdown-item">Testimonial</a>
@@ -102,13 +102,26 @@
                         <i class="fas fa-shopping-cart"></i> Cart
                         <span class="badge bg-primary ms-1" id="cartCount">0</span>
                     </a>
-                    <a href="~/book.html" class="btn btn-primary py-2 px-4 d-none d-xl-inline-block rounded-pill">Book Now</a>
+                    <a asp-controller="Booking" asp-action="Create"
+                       class="btn btn-primary py-2 px-4 d-none d-xl-inline-block rounded-pill">
+                        Book Now
+                    </a>
                 </div>
             </nav>
         </div>
     </div>
     <!-- Navbar End -->
-	@RenderBody()
+
+
+    <div class="d-flex">
+        @RenderSection("Sidebar", required: false)
+
+        <div class="flex-grow-1 p-4">
+            @RenderBody()
+        </div>
+    </div>
+
+
     <!-- Footer Start -->
     <div class="container-fluid footer py-6 my-6 mb-0 bg-light wow bounceInUp" data-wow-delay="0.1s">
         <div class="container">
