--- a/ITIResturant/ITIResturant/Areas/Admin/Views/Shared/_AdminSharedLayout.cshtml
+++ b/ITIResturant/ITIResturant/Areas/Admin/Views/Shared/_AdminSharedLayout.cshtml
@@ -29,6 +29,11 @@
     <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
     Users
 </a>
+                        <a class="nav-link" asp-area="Admin" asp-controller="Table" asp-action="Index">
+                            <div class="sb-nav-link-icon"><i class="fas fa-chair"></i></div>
+                            Tables
+                        </a>
+
 
                         <a class="nav-link" asp-area="Admin" asp-controller="Products" asp-action="Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-box"></i></div>
@@ -42,6 +47,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-comment-dots"></i></div>
                             Feedback
                         </a>
+
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
