--- a/ITIResturant/ITIResturant/Views/Booking/Create.cshtml
+++ b/ITIResturant/ITIResturant/Views/Booking/Create.cshtml
@@ -1,12 +1,9 @@
-﻿
-@using Restaurant.BLL.Model_VM.Booking
-
+﻿@using Restaurant.BLL.Model_VM.Booking
 @model CreateBookingVM
-
 
 @{
     Layout = "NewLayout";
-    ViewData["ActivePage"] = "Create"; 
+    ViewData["ActivePage"] = "Create";
 }
 
 @section Sidebar {
@@ -31,7 +28,6 @@
 }
 
 <h2>Create Booking</h2>
-
 
 <div class="card">
     <div class="card-header" style="background-color:#D4A762; color:white">
@@ -91,13 +87,7 @@
                 <span class="text-danger" asp-validation-for="SpecialRequests"></span>
             </div>
 
-            <!-- Customer Id -->
-            <div class="mb-3">
-                <label asp-for="CustomerId" class="form-label"></label>
-                <input type="number" asp-for="CustomerId" class="form-control" />
-                <span class="text-danger" asp-validation-for="CustomerId"></span>
-            </div>
-
+            <!-- Table Number -->
             <div class="mb-3">
                 <label class="form-label">Table Number</label>
                 <select asp-for="TableId" asp-items="ViewBag.Tables" class="form-control">
@@ -105,6 +95,7 @@
                 </select>
                 <span class="text-danger" asp-validation-for="TableId"></span>
             </div>
+
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
