--- a/ITIResturant/ITIResturant/Views/Booking/Edit.cshtml
+++ b/ITIResturant/ITIResturant/Views/Booking/Edit.cshtml
@@ -1,6 +1,4 @@
-﻿
-@using Restaurant.BLL.Model_VM.Booking
-
+﻿@using Restaurant.BLL.Model_VM.Booking
 @model EditBookingVM
 
 <div class="card">
@@ -18,7 +16,6 @@
 
         <form enctype="multipart/form-data"
               asp-action="Edit" asp-controller="Booking">
-
 
             <!-- Booking Date -->
             <div class="mb-3">
@@ -62,13 +59,7 @@
                 <span class="text-danger" asp-validation-for="SpecialRequests"></span>
             </div>
 
-            <!-- Customer Id -->
-            <div class="mb-3">
-                <label asp-for="CustomerId" class="form-label"></label>
-                <input type="number" asp-for="CustomerId" class="form-control" />
-                <span class="text-danger" asp-validation-for="CustomerId"></span>
-            </div>
-
+            <!-- Table Number -->
             <div class="mb-3">
                 <label class="form-label">Table Number</label>
                 <select asp-for="TableId" asp-items="ViewBag.Tables" class="form-control">
@@ -76,8 +67,6 @@
                 </select>
                 <span class="text-danger" asp-validation-for="TableId"></span>
             </div>
-
-
 
             <button type="submit" class="btn btn-success">Update</button>
         </form>
