--- a/ITIResturant/ITIResturant/Areas/Admin/Views/Users/Edit.cshtml
+++ b/ITIResturant/ITIResturant/Areas/Admin/Views/Users/Edit.cshtml
@@ -33,6 +33,12 @@
     </div>
 
     <div class="form-group mb-3">
+        <label asp-for="UserName" class="control-label"></label>
+        <input asp-for="UserName" class="form-control" />
+        <span asp-validation-for="UserName" class="text-danger"></span>
+    </div>
+
+    <div class="form-group mb-3">
         <label asp-for="Password" class="control-label"></label>
         <input asp-for="Password" class="form-control" type="password" />
         <span asp-validation-for="Password" class="text-danger"></span>
