--- a/ITIResturant/ITIResturant/Areas/Admin/Views/Users/Index.cshtml
+++ b/ITIResturant/ITIResturant/Areas/Admin/Views/Users/Index.cshtml
@@ -19,6 +19,7 @@
             <th>@Html.DisplayNameFor(model => model.First().FirstName)</th>
             <th>@Html.DisplayNameFor(model => model.First().LastName)</th>
             <th>@Html.DisplayNameFor(model => model.First().Email)</th>
+            <th>@Html.DisplayNameFor(model => model.First().UserName)</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -30,6 +31,7 @@
                 <td>@item.FirstName</td>
                 <td>@item.LastName</td>
                 <td>@item.Email</td>
+                <td>@item.UserName</td>
                 <td>
                     <a asp-area="Admin" asp-controller="Users" asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm">Details</a>
                     <a asp-area="Admin" asp-controller="Users" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Edit</a>
