--- a/ITIResturant/ITIResturant/Views/Profile/Index.cshtml
+++ b/ITIResturant/ITIResturant/Views/Profile/Index.cshtml
@@ -87,6 +87,13 @@
                                         <span asp-validation-for="Email" class="text-danger"></span>
                                     </div>
                                 </div>
+                                <div class="col-md-6">
+                                    <div class="mb-3">
+                                        <label asp-for="UserName" class="form-label"></label>
+                                        <input asp-for="UserName" class="form-control" />
+                                        <span asp-validation-for="UserName" class="text-danger"></span>
+                                    </div>
+                                </div>
                                 <div class="col-md-12">
                                     <div class="mb-3">
                                         <label asp-for="Address" class="form-label"></label>
