--- a/ITIResturant/ITIResturant/Views/Cart/Index.cshtml
+++ b/ITIResturant/ITIResturant/Views/Cart/Index.cshtml
@@ -74,7 +74,7 @@
                                 <h5 class="mb-0 text-primary">@Model.GrandTotal.ToString("C")</h5>
                             </div>
 
-                            <a class="btn btn-primary checkout-btn w-100" href="@Url.Action("Checkout", "Order")">
+                            <a class="btn btn-primary checkout-btn w-100" href="@Url.Action("PaymentFormWithOrderDetails", "Payment")">
                                 <i class="fas fa-credit-card me-2"></i>Proceed to Checkout
                             </a>
 
