--- a/ITIResturant/ITIResturant/Views/Shared/_Header.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/_Header.cshtml
@@ -22,14 +22,11 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu bg-light">
-<<<<<<< HEAD
+
                                 <a asp-controller="Booking" asp-action="GetAll" class="dropdown-item">Booking</a>
-                                <a asp-controller="Team" asp-action="Index" class="dropdown-item">Our Team</a>
-                                <a asp-controller="Testimonial" asp-action="Index" class="dropdown-item">Testimonial</a>
-=======
-                                <a asp-controller="Booking" asp-action="Create" class="dropdown-item">Booking</a>
+                                <a asp-controller="Home" asp-action="Testimonial" class="dropdown-item">Testimonial</a>
                                 <a asp-controller="Home" asp-action="Team" class="dropdown-item">Our Team</a>
->>>>>>> origin
+
                             </div>
                         </div>
                         <a asp-controller="Home" asp-action="Contact" class="nav-item nav-link">Contact</a>
