--- a/ITIResturant/ITIResturant/Views/Shared/_Header.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/_Header.cshtml
@@ -24,7 +24,7 @@
                             <div class="dropdown-menu bg-light">
 
                                 <a asp-controller="Booking" asp-action="GetAll" class="dropdown-item">Booking</a>
-                                <a asp-controller="Home" asp-action="Testimonial" class="dropdown-item">Testimonial</a>
+                                @* <a asp-controller="Home" asp-action="Testimonial" class="dropdown-item">Testimonial</a> *@
                                 <a asp-controller="Home" asp-action="Team" class="dropdown-item">Our Team</a>
 
                             </div>
