--- a/ITIResturant/ITIResturant/Views/Home/Index.cshtml
+++ b/ITIResturant/ITIResturant/Views/Home/Index.cshtml
@@ -6,67 +6,24 @@
 }
 
 <!-- Hero Start -->
-@Html.Partial("~/Views/Home/_Hero.cshtml") 
+@Html.Partial("~/Views/Shared/Home/_Hero.cshtml")
 <!-- Hero End -->
 <!-- About Start -->
-@Html.Partial("~/Views/Home/_About.cshtml") 
+@Html.Partial("~/Views/Shared/Home/_About.cshtml")
 <!-- About End -->
 <!-- Service Start -->
-@* @Html.Partial("~/Views/Home/_Service.cshtml") *@
+@Html.Partial("~/Views/Shared/Home/_Service.cshtml")
 <!-- Service End -->
 <!-- Events Start -->
-@* @Html.Partial("~/Views/Home/_Events.cshtml") *@
+@Html.Partial("~/Views/Shared/Home/_Events.cshtml")
 <!-- Events End -->
 <!-- Menu Start -->
-<ul class="nav nav-pills mb-4 justify-content-center" id="homeMenuTabs" role="tablist">
-    @for (int i = 0; i < Model.Count; i++)
-    {
-        var category = Model[i];
-        <li class="nav-item" role="presentation">
-            <button class="nav-link @(i == 0 ? "active" : "")"
-                    id="home-tab-@category.CategoryId"
-                    data-bs-toggle="pill"
-                    data-bs-target="#home-content-@category.CategoryId"
-                    type="button"
-                    role="tab"
-                    aria-controls="home-content-@category.CategoryId"
-                    aria-selected="@(i == 0 ? "true" : "false")">
-                @category.CategoryName
-            </button>
-        </li>
-    }
-</ul>
-
-<div class="tab-content" id="homeMenuTabsContent">
-    @for (int i = 0; i < Model.Count; i++)
-    {
-        var category = Model[i];
-        <div class="tab-pane fade @(i == 0 ? "show active" : "")"
-             id="home-content-@category.CategoryId"
-             role="tabpanel"
-             aria-labelledby="home-tab-@category.CategoryId">
-
-            <div class="row g-4" id="productList">
-                @foreach (var product in category.Products.Take(6))
-                {
-                    @Html.Partial("~/Views/Product/_ProductBox.cshtml", product)
-                }
-            </div>
-
-            <div class="text-center mt-4">
-                <a class="btn btn-outline-primary"
-                   href="@Url.Action("Menu", "Home", new { categoryId = category.CategoryId })">
-                    View All
-                </a>
-            </div>
-        </div>
-    }
-</div>
+@Html.Partial("~/Views/Shared/Home/_MenuHome.cshtml", Model)
 <!-- Menu End -->
 <!-- Book Us Start -->
 <!-- Book Us End --> 
 <!-- Team Start -->
-@* @Html.Partial("~/Views/Home/_Team.cshtml") *@
+@Html.Partial("~/Views/Shared/Home/_Team.cshtml")
 <!-- Team End --> 
 <!-- Testimonial Start -->
 @* @Html.Partial("~/Views/Home/_Testimonial.cshtml")  *@
