--- a/ITIResturant/ITIResturant/Views/Shared/Home/_Events.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/Home/_Events.cshtml
@@ -39,7 +39,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.1s">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-1.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-1.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Wedding</h4>
                                             <a href="img/event-1.jpg" data-lightbox="event-1" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -48,7 +48,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.3s">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-2.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-2.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Corporate</h4>
                                             <a href="img/event-2.jpg" data-lightbox="event-2" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -57,7 +57,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.5s">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-3.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-3.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Wedding</h4>
                                             <a href="img/event-3.jpg" data-lightbox="event-3" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -66,7 +66,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.7s">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-4.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-4.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Buffet</h4>
                                             <a href="img/event-4.jpg" data-lightbox="event-4" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.1s">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-5.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-5.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Cocktail</h4>
                                             <a href="img/event-5.jpg" data-lightbox="event-5" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -84,7 +84,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.3s">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-6.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-6.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Wedding</h4>
                                             <a href="img/event-6.jpg" data-lightbox="event-6" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -93,7 +93,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.5s">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-7.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-7.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Buffet</h4>
                                             <a href="img/event-7.jpg" data-lightbox="event-7" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -102,7 +102,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.7s">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-8.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-8.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Corporate</h4>
                                             <a href="img/event-8.jpg" data-lightbox="event-17" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -119,7 +119,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6 col-lg-3">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-1.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-1.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Wedding</h4>
                                             <a href="img/01.jpg" data-lightbox="event-8" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -128,7 +128,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-2.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-2.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Wedding</h4>
                                             <a href="img/01.jpg" data-lightbox="event-9" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -145,7 +145,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6 col-lg-3">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-3.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/~/img/event-3.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Corporate</h4>
                                             <a href="img/01.jpg" data-lightbox="event-10" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -154,7 +154,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-4.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-4.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Corporate</h4>
                                             <a href="img/01.jpg" data-lightbox="event-11" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -171,7 +171,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6 col-lg-3">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-5.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-5.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Cocktail</h4>
                                             <a href="img/01.jpg" data-lightbox="event-12" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-6.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-6.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Cocktail</h4>
                                             <a href="img/01.jpg" data-lightbox="event-13" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -197,7 +197,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6 col-lg-3">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-7.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-7.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Buffet</h4>
                                             <a href="img/01.jpg" data-lightbox="event-14" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
@@ -206,7 +206,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="img/event-8.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-8.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Buffet</h4>
                                             <a href="img/01.jpg" data-lightbox="event-15" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
