--- a/ITIResturant/ITIResturant/Areas/Admin/Views/Feedback/Create.cshtml
+++ b/ITIResturant/ITIResturant/Areas/Admin/Views/Feedback/Create.cshtml
@@ -1,7 +1,13 @@
 ﻿
-@using Restaurant.BLL.Model_VM.Feedback
- @model Restaurant.DAL.Entities.Feedback 
 
+@using Restaurant.BLL.Model_VM.Feedback
+@model CreateFeedbackVM
+
+
+    @{
+    ViewData["Title"] = "Create Feedback";
+    Layout = "_AdminSharedLayout";
+}
 
 <h2>Add Feedback</h2>
 
