--- a/ITIResturant/ITIResturant/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ITIResturant/ITIResturant/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,3 +2,7 @@
 @using Restaurant.PL.Models
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@*  @using Restaurant.BLL.ModelVMFeedback  *@
+
+@using Restaurant.BLL.Model_VM.Feedback
+
