--- a/ITIResturant/ITIResturant/Views/Feedback/Delete.cshtml
+++ b/ITIResturant/ITIResturant/Views/Feedback/Delete.cshtml
@@ -1,8 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using Restaurant.BLL.Model_VM.Feedback
 
 @model Restaurant.DAL.Entities.Feedback
 
