Edit Payment, Order, and Profile (order history), OrderController Added, Order History, cancell order

--- a/ITIResturant/ITIResturant/Views/Payment/PaymentFormWithOrderDetails.cshtml
+++ b/ITIResturant/ITIResturant/Views/Payment/PaymentFormWithOrderDetails.cshtml
@@ -1,7 +1,7 @@
-﻿@model Resturant.BLL.ModelVm.PaymentVm.CreatePaymentVm
+﻿@model Resturant.BLL.ModelVM.PaymentVM.CreatePaymentVM
 @using Restaurant.DAL.Enum
 @{
-    ViewBag.Title = "Checkout Payment";
+    ViewBag.Title = "PaymentFormWithOrderDetails";
 }
 
 
