--- a/ITIResturant/ITIResturant/Views/Product/_ProductBox.cshtml
+++ b/ITIResturant/ITIResturant/Views/Product/_ProductBox.cshtml
@@ -17,7 +17,7 @@
         <div class="w-100 d-flex flex-column text-start ps-4">
             <div class="d-flex justify-content-between border-bottom border-primary pb-2 mb-2">
                 <h4>@Model.Name</h4>
-                <h4 class="text-primary">$@Model.Price</h4>
+                <h4 class="text-primary">@Model.Price.ToString("C")</h4>
             </div>
             <p class="mb-0">@Model.Description</p>
 
